# MandelbrotPy_AW

./: .gitignore  LICENSE  MandelbrotPy.toml  README.md  pyproject.toml  test.py
Mandelbrot_AW/: Mandelbrot_Continuous.py  Mandelbrot_Discrete.py  Mandelbrot_Generate.py  Mandelbrot_Plot.py  __init__.py
