# This is a TOML document.

[build-system]
requires = ["setuptools ≥ 61.0", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build-meta"

[tool.setuptools]
py-modules = ["Mandelbrotpy"]

[project]
name = "Mandelbrotpy"
description = "AW's programming exercise for Mandelbrot_Set plotting"
readme = { file = "README.md", content-type = "text/markdown" }
version = "0.0.1"
license = { file = "LICENSE" }
requires-python = "≥ 3.10"
dependencies = ["matplotlib", "numpy", "Cython"]
authors = [{ name = "Amilly Wang", email = "amillyforph@outlook.com" }]
maintainers = [{ name = "Amilly Wang", email = "amillyforph@outlook.com" }]
keywords = ["Mandelbrot", "visualization"]

[project.urls]
Homepage = "https://github.com/AmillyW/MandelbrotPy_AW"
Repository = "https://github.com/AmillyW/MandelbrotPy_AW"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["test"]
